--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
           </p>
         </div>
         <div class="footer-sotial-media">
-          <p class="footer-sotial-title">Social media</p>
+          <p class="footer-sotial-title title">Social media</p>
           <ul class="footer-soc-list list">
             <li class="footer-soc-item item">
               <a href="" class="footer-soc-link link">
@@ -487,6 +487,32 @@
             </li>
           </ul>
         </div>
+        <div class="footer-subscribe">
+          <p class="footer-subscribe-title title">Subscribe</p>
+          <form class="footer-form">
+            <div class="footer-wrap">
+              <input
+                type="email"
+                name="subscribe-email"
+                id="subscribe-email"
+                class="footer-subscribe-input"
+                placeholder="E-mail"
+                required
+              />
+              <label
+                for="subscribe-email"
+                class="footer-subscribe-label"
+                aria-label="footer-input"
+              ></label>
+              <button type="submit" class="footer-subscribe-btn button">
+                Subscribe
+                <svg class="footer-subscribe-icon" width="24" height="20">
+                  <use href="./images/icons/icons.svg#icon-icon-send"></use>
+                </svg>
+              </button>
+            </div>
+          </form>
+        </div>
       </div>
     </footer>
 
@@ -497,6 +523,82 @@
             <use href="./images/icons/icons.svg#icon-clouse-modal"></use>
           </svg>
         </button>
+        <p class="modal-title">Leave your contacts and we will call you back</p>
+        <form class="modal-form">
+          <label class="modal-label">
+            <span class="modal-label-title">Name</span>
+            <span class="input-wrap">
+              <input
+                type="text"
+                name="user-name"
+                class="modal-input"
+                pattern="[a-zA-Zа-яА-ЯїЇіІ]+"
+                minlength="2"
+                required
+              />
+              <svg class="modal-icon" width="18" height="18">
+                <use href="./images/icons/icons.svg#icon-icon-name"></use>
+              </svg>
+            </span>
+          </label>
+
+          <label class="modal-label">
+            <span class="modal-label-title">Phone</span>
+            <span class="input-wrap">
+              <input
+                type="tel"
+                name="user-phone"
+                class="modal-input"
+                pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
+                title="xxx-xxx-xx-xx"
+                required
+              />
+              <svg class="modal-icon" width="18" height="24">
+                <use href="./images/icons/icons.svg#icon-icon-phone"></use>
+              </svg>
+            </span>
+          </label>
+
+          <label class="modal-label">
+            <span class="modal-label-title">Email</span>
+            <span class="input-wrap">
+              <input type="email" name="user-email" class="modal-input" />
+              <svg class="modal-icon" width="18" height="24">
+                <use href="./images/icons/icons.svg#icon-icon-email"></use>
+              </svg>
+            </span>
+          </label>
+
+          <label class="modal-label">
+            <span class="modal-label-title">Comment</span>
+            <textarea
+              name="user-text"
+              class="modal-textarea"
+              placeholder="Text input"
+            ></textarea>
+          </label>
+
+          <div class="modal-field">
+            <input
+              class="input-check visually-hidden"
+              type="checkbox"
+              id="privacy"
+              name="privacy"
+              value="true"
+            />
+            <label for="privacy" class="check-text">
+              <span>
+                <svg class="check-icon" width="10" height="8">
+                  <use href="./images/icons/icons.svg#icon-icon-click"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the&nbsp;
+              <a href="">Privacy Policy</a></label
+            >
+          </div>
+
+          <button type="submit" class="modal-btn">Send</button>
+        </form>
       </div>
     </div>
 
