--- a/portfolio.html
+++ b/portfolio.html
@@ -316,7 +316,7 @@
           </p>
         </div>
         <div class="footer-sotial-media">
-          <p class="footer-sotial-title">Social media</p>
+          <p class="footer-sotial-title title">Social media</p>
           <ul class="footer-soc-list list">
             <li class="footer-soc-item item">
               <a href="" class="footer-soc-link link">
@@ -347,6 +347,32 @@
               </a>
             </li>
           </ul>
+        </div>
+        <div class="footer-subscribe">
+          <p class="footer-subscribe-title title">Subscribe</p>
+          <form class="footer-form">
+            <div class="footer-wrap">
+              <input
+                type="email"
+                name="subscribe-email"
+                id="subscribe-email"
+                class="footer-subscribe-input"
+                placeholder="E-mail"
+                required
+              />
+              <label
+                for="subscribe-email"
+                class="footer-subscribe-label"
+                aria-label="footer-input"
+              ></label>
+              <button type="submit" class="footer-subscribe-btn button">
+                Subscribe
+                <svg class="footer-subscribe-icon" width="24" height="20">
+                  <use href="./images/icons/icons.svg#icon-icon-send"></use>
+                </svg>
+              </button>
+            </div>
+          </form>
         </div>
       </div>
     </footer>
