--- a/index.html
+++ b/index.html
@@ -490,27 +490,25 @@
         <div class="footer-subscribe">
           <p class="footer-subscribe-title title">Subscribe</p>
           <form class="footer-form">
-            <div class="footer-wrap">
-              <input
-                type="email"
-                name="subscribe-email"
-                id="subscribe-email"
-                class="footer-subscribe-input"
-                placeholder="E-mail"
-                required
-              />
-              <label
-                for="subscribe-email"
-                class="footer-subscribe-label"
-                aria-label="footer-input"
-              ></label>
-              <button type="submit" class="footer-subscribe-btn button">
-                Subscribe
-                <svg class="footer-subscribe-icon" width="24" height="20">
-                  <use href="./images/icons/icons.svg#icon-icon-send"></use>
-                </svg>
-              </button>
-            </div>
+            <input
+              type="email"
+              name="subscribe-email"
+              id="subscribe-email"
+              class="footer-subscribe-input"
+              placeholder="E-mail"
+              required
+            />
+            <label
+              for="subscribe-email"
+              class="footer-subscribe-label"
+              aria-label="footer-input"
+            ></label>
+            <button type="submit" class="footer-subscribe-btn button">
+              Subscribe
+              <svg class="footer-subscribe-icon" width="24" height="20">
+                <use href="./images/icons/icons.svg#icon-icon-send"></use>
+              </svg>
+            </button>
           </form>
         </div>
       </div>
@@ -593,7 +591,7 @@
                 </svg>
               </span>
               I accept the terms and conditions of the&nbsp;
-              <a href="">Privacy Policy</a></label
+              <a href="" class="modal-href">Privacy Policy</a></label
             >
           </div>
 
